# sobit_edu

./: CHANGELOG.rst  LICENSE  README.en.md  README.md  install.sh  sobit_setup.sh
sobit_edu/: CMakeLists.txt  package.xml
sobit_edu_bringup/: CMakeLists.txt  README.md  package.xml
sobit_edu_bringup/launch/: 3dsensor.launch  azure_kinect.launch  minimal.launch  ps3_control.launch  ps4_control.launch  urg.launch
sobit_edu_bringup/launch/includes/: description_education_turtolebot.launch.xml  openni2.launch.xml  pcl.launch  robot_education_turtolebot.launch.xml  xtion_pro.launch.xml
sobit_edu_bringup/scripts/: sobit_edu_ps3_control.py  sobit_edu_ps4_control.py
sobit_edu_control/: CMakeLists.txt  README.md  package.xml
sobit_edu_control/config/: joint_limit.yaml  joint_limit.yaml.backup  position_control.yaml  state_control_arm.yaml  state_control_dynamixel_arm.yaml  state_control_dynamixel_arm_head.yaml  state_control_dynamixel_head.yaml  state_control_head.yaml
sobit_edu_control/launch/: sobit_edu_control.launch
sobit_edu_description/: CMakeLists.txt  README.md  package.xml
sobit_edu_description/launch/: display.launch
sobit_edu_description/meshes/back/: back_base.stl
sobit_edu_description/meshes/body/: pole_bottom_39mm.stl  pole_middle_90mm.stl  pole_top_200mm.stl
sobit_edu_description/meshes/hand/: hand_finger_l.stl  hand_finger_r.stl  hand_inner_r.stl  hand_outer_l.stl
sobit_edu_description/meshes/head/: head_camera_base.stl  head_camera_pan.stl  head_camera_tilt.stl
sobit_edu_description/meshes/sensor/: lidar_base.stl  mic.stl
sobit_edu_description/robots/: sobit_edu.urdf.xacro
sobit_edu_description/rviz/: display.rviz
sobit_edu_description/urdf/: materials.urdf.xacro
sobit_edu_description/urdf/arm/: arm.urdf.xacro  arm.urdf.xacro.backup
sobit_edu_description/urdf/back/: back.urdf.xacro  pole.urdf.xacro.backup
sobit_edu_description/urdf/base/: base.urdf.xacro
sobit_edu_description/urdf/body/: cover.urdf.xacro  stacks.urdf.xacro  stacks.urdf.xacro.backup
sobit_edu_description/urdf/hand/: hand.urdf.xacro  hand.urdf.xacro.backup
sobit_edu_description/urdf/head/: head.urdf.xacro  xtion_motor.urdf.xacro.backup
sobit_edu_description/urdf/sensor/: head_camera.urdf.xacro  lidar.urdf.xacro  matrix.urdf.xacro  matrix.urdf.xacro.backup  mic.urdf.xacro  urg.urdf.xacro.backup
sobit_edu_library/: CMakeLists.txt  README.md  package.xml
sobit_edu_library/config/: sobit_edu_pose.yaml
sobit_edu_library/example/: test_arm_controll.py  test_control_arm.cpp  test_control_arm.py  test_control_head.cpp  test_control_head.py  test_control_wheel.cpp  test_control_wheel.py  test_grasp.cpp  test_grasp.py  test_pantilt_controll.py  test_place.cpp  test_place.py  test_pose.py  test_wheel.py
sobit_edu_library/include/sobit_edu_library/: sobit_edu_controller.hpp  sobit_edu_joint_controller.hpp  sobit_edu_library.h  sobit_edu_wheel_controller.hpp
sobit_edu_library/include/sobit_education_library/: sobit_edu_controller.hpp
sobit_edu_library/launch/: load_sobit_edu_pose.launch
sobit_edu_library/src/: sobit_edu_controller.cpp  sobit_edu_joint_controller.cpp  sobit_edu_library.cpp  sobit_edu_pybind.cpp  sobit_edu_wheel_controller.cpp  sobit_education_controller.cpp  sobit_education_pybind.cpp  sobit_turtlebot_controller.cpp
sobit_education_bringup/: CMakeLists.txt  README.md  install.sh  package.xml
sobit_education_bringup/launch/: 3dsensor.launch  dynamixel_check.launch  minimal.launch  ps3_control.launch  ps4_control.launch  test.launch  urg.launch
sobit_education_bringup/launch/includes/: description_education_turtolebot.launch.xml  openni2.launch.xml  robot_education_turtolebot.launch.xml  test.launch  test2.launch  xtion_pro.launch.xml
sobit_education_bringup/src/: joint_controller.py  modi_wheel_controller.py  put_controller.py  sobit_edu_ps3_control.py  sobit_edu_ps4_control.py  wheel_controller(backup).py  wheel_controller.py
sobit_education_control/: CMakeLists.txt  README.md  package.xml
sobit_education_control/config/: initial_joint_ang.yaml  joint_limit.yaml  position_control(backup).yaml  position_control.yaml
sobit_education_control/include/sobit_education_control/: dynamixel_control.h  dynamixel_port_control.h  dynamixel_setting.h  sobit_common_dynamixel.h  sobit_education_hw.h
sobit_education_control/launch/: sobit_education_control.launch
sobit_education_control/src/: dynamixel_control.cpp  dynamixel_port_control.cpp  dynamixel_setting.cpp  sobit_common_dynamixel.cpp  sobit_education_control(バックアップ).cpp  sobit_education_control.cpp  sobit_education_dynamixel(バックアップ).cpp  sobit_education_dynamixel.cpp  sobit_education_hw.cpp  test.cpp
sobit_education_description/: CMakeLists.txt  README.md  package.xml
sobit_education_description/launch/: display.launch  urdf_check.launch
sobit_education_description/meshes/: sobit_edu_hand.dae  sobit_edu_pan.dae  sobit_edu_pole.dae  sobit_edu_tilt.dae
sobit_education_description/meshes/arm/: arm_base.dae  arm_base.stl
sobit_education_description/meshes/body/: cover.stl
sobit_education_description/meshes/hand/: hand_back.dae  hand_back.stl  hand_link_inner_l.stl  hand_link_outer_r.stl
sobit_education_description/model/urdf/: tmp.urdf  (+2 more)
sobit_education_description/robots/: sobit_education(backup).gv  sobit_education.gv  sobit_education.urdf.xacro  test.urdf  tmp.urdf
sobit_education_description/rviz/: display.rviz  urdf_debug.rviz
sobit_education_description/urdf/: common.xacro  materials.urdf.xacro
sobit_education_library/: CMakeLists.txt  README.md  package.xml
sobit_education_library/config/: sobit_education_pose.yaml
sobit_education_library/example/: test_arm_controll.py  test_grasp.cpp  test_grasp.py  test_pantilt_controll.py  test_pose.py  test_wheel.py
sobit_education_library/include/sobit_education_library/: sobit_education_controller.hpp  sobit_turtlebot_controller.hpp
sobit_education_library/launch/: load_sobit_education_pose.launch
sobit_education_library/src/: sobit_education_controller.cpp  sobit_education_pybind.cpp  sobit_turtlebot_controller.cpp
(+32 files in other folders)
